Bot upgrade, Include profit tracking system, advanced sell logic and upgrades 🚀🚀

--- a/.env.copy
+++ b/.env.copy
@@ -2,12 +2,19 @@ PRIVATE_KEY=
 RPC_ENDPOINT=http://swqos.solanavibestation.com/?api_key=<API-KEY>
 RPC_WEBSOCKET_ENDPOINT=ws://swqos.solanavibestation.com/?api_key=<API-KEY>
 QUOTE_MINT=WSOL
-QUOTE_AMOUNT=0.0001
-AMOUNT_TO_WSOL=0.005
+QUOTE_AMOUNT=0.01
+AMOUNT_TO_WSOL=0.03
 AUTO_SELL=true
-SLIPPAGE=0.005 #0.5%
-MAX_RETRY=10
-FREEZE_AUTHORITY=true
-SELL_TIMER=10000 #set as milliseconds
+BUY_SLIPPAGE=30 #Set slippage percentage
+SELL_SLIPPAGE=30 #Set slippage percentage
+MAX_RETRY=15
+FREEZE_AUTHORITY=true #Check freezeAuthority if disabled
+MINT_AUTHORITY=true #Check MintAuthority if disabled
+SELL_TIMER=180000 #set as milliseconds
 COMMITMENT_LEVEL=processed
-LOG_LEVEL=info
+LOG_LEVEL=trace
+TAKE_PROFIT=40  # Set the take profit percentage
+PRICE_CHECK_INTERVAL=2500
+STOP_LOSS=15
+ONE_TOKEN_AT_A_TIME=false
+MAX_NUMBERS_TOKENS_TO_PROCESS=2
