--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@solana/web3.js": "^1.89.1",
     "@triton-one/yellowstone-grpc": "^0.4.0",
     "bigint-buffer": "^1.1.5",
+    "bip39": "^3.1.0",
     "bn.js": "^5.2.1",
     "bs58": "^5.0.0",
     "dotenv": "^16.4.1",
+    "ed25519-hd-key": "^1.3.0",
     "global-agent": "^3.0.0",
     "global-tunnel-ng": "^2.7.1",
     "http-proxy-agent": "^7.0.2",
