--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "http-proxy-agent": "^7.0.2",
     "https-proxy-agent": "^7.0.4",
     "jito-ts": "latest",
+    "node-fetch": "^3.3.2",
     "pino": "^8.18.0",
     "pino-pretty": "^10.3.1",
-    "pino-std-serializers": "^6.2.2"
+    "pino-std-serializers": "^6.2.2",
+    "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.5",
